# deep_thought

./: Cargo.toml  README.md
docs/: openapi.yaml
src/: main.rs
