[package]
name = "deep_thought"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde_yaml = "0.9.32"
utoipa = { version = "4.2.0", features = ["rocket_extras", "yaml"] }
